[gd_scene load_steps=6 format=2]

[ext_resource path="res://ECS/Terent.tscn" type="PackedScene" id=1]
[ext_resource path="res://NPCs/Stations/Station.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPCs/Stations/DefenseStation.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SphereShape" id=2]
radius = 293.957

[node name="DefenseStation" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.72657, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="." index="3"]
transform = Transform( 6, 0, 0, 0, 3, 0, 0, 0, 2, 13.7559, -0.883845, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="." index="4"]
transform = Transform( 4, 0, 0, 0, 1.5, 0, 0, 0, 1, 23.8339, -2.1864, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Detection" type="Area" parent="." index="5"]

[node name="CollisionShape" type="CollisionShape" parent="Detection" index="0"]
shape = SubResource( 2 )

[node name="Tur" parent="." index="6" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.641272, 4.47149, 0 )

[node name="Tur2" parent="." index="7" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.3874, 2.57879, 0 )

[node name="Tur3" parent="." index="8" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.9106, -0.392079, 0 )

[node name="Tur4" parent="." index="9" instance=ExtResource( 1 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 22.4407, -4.51718, -0.192506 )

[node name="Tur5" parent="." index="10" instance=ExtResource( 1 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 3.83918, -4.12833, -1.43051e-06 )

[node name="Tur6" parent="." index="11" instance=ExtResource( 1 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 13.0835, -4.12833, -1.43051e-06 )

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="body_exited" from="Tur6" to="." method="_on_Tur6_body_exited"]
